# leptos_ssr_test_1

./: Cargo.toml  style.css
src/: app.rs  main.rs
