[package]
name = "leptos_ssr_test_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
leptos_actix = "0.5.6"
leptos = { version = "0.5.6", features = ["ssr"] }
leptos_meta = { version = "0.5.6", features = ["ssr"] }
leptos_router = { version = "0.5.6", features = ["ssr"] }
actix-files = "0.6.5"

[package.metadata.leptos]
style-file = "style.css"
assets-dir = "assets"
output-name = "leptos_ssr_test_1"
bin-default-features = true
bin-features=[""]
lib-default-features = true
lib-features=[""]
